# freeLABorga

./: Cargo.toml  README.md  db.db3  test_data.sql
docs/spezifikation/: ER-Diagramm.drawio
src/: helpers.rs  main.rs  models.rs  test_helpers.rs
src/admin/: db.rs  mod.rs  routes.rs  tests.rs
src/damage/: db.rs  mod.rs  routes.rs  tests.rs
src/gegenstand/: db.rs  mod.rs  routes.rs  tests.rs
src/heatmap/: db.rs  mod.rs  routes.rs  tests.rs
src/lagerplatz/: db.rs  mod.rs  routes.rs  tests.rs
src/lend/: db.rs  mod.rs  routes.rs  tests.rs
src/person/: db.rs  mod.rs  routes.rs  tests.rs
src/suche/: db.rs  mod.rs  routes.rs  tests.rs
static/css/: admin.css  detailansicht.css  gegenstaende.css  heatmap.css  index.css  lagerplaetze.css  personen.css  style.css
static/js/: add_edit_popup.js  admin.js  borrow_takeback_popup.js  detailansicht.js  gegenstaende.js  heatmap.js  impressum_datenschutz.js  index.js  lagerplaetze.js  load_table_from_json.js  personen.js  popup.js  script.js
templates/: 404.html  admin.html  base.html  datenschutz.html  detailansicht.html  gegenstaende.html  heatmap.html  impressum.html  index.html  lagerplaetze.html  personen.html
